--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "eslint": "^6.8.0",
     "hapi-sequelizejs": "^3.1.0",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.8",
+    "koa-send": "^5.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
